# Dashboard

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
sample_data/: sample_data.csv
src/: main.py
src/dashboard/: main.py
tests/: test_main.py
